# byte-size-travel

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: logging_config.py  sources.yaml  sources.yaml.bak  sources.yml
html_templates/email_newsletter/bkp/: template_one_bkp.html
src/: database.py  feed_checker.py  fetchdatabase.py  main.py  parsers.py  populate_db.py  source_manager.py
src/config/: logging_config.py  source_manager.py
src/content/enriching/: article_enricher.py
src/content/fetching/: parsers.py  rss_full_fetch.py
src/content/selection/: article_selector.py
src/content/writing/: newsletter_writer.py
src/database/: fetch_database.py  populate_db.py  processed_database.py
src/html_templates/: template_one.html  template_one_bkp.html
src/models/: schemas.py
src/services/: openai_client.py
src/services/amazon_ses/: amazon_ses_client.py
template_playground/: tuesday_edition.html  web_edition.html
tests/: test_db.py  test_email_simple.py  test_feed_checker.py  test_populate_db.py
tests/fixtures/: test_sources.yaml
tools/: handlebars_helper.js  package.json
website/: index.html  newsletters.html  newsletters.json  subscription-confirmed.html  subscription-error.html
website/css/: newsletter_style.css  style.css
website/js/: archive.js
website/newsletters/: newsletter-2025-04-22.html
